--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='DIAPP'>
   <head>
     <meta charset="utf-8">
+    <script src="app.js"></script>
+    <script src="angular.min.js"></script>
     <title>hello</title>
   </head>
   <body>
-    hello!!!vfklfdmvmvf
+    <div ng-controller='DICONTROLLER'>
+      <input type="text" ng-model="name">
+    </div>
   </body>
 </html>
