--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div ng-controller='DICONTROLLER'>
+      entrer your name:
       <input type="text" ng-model="name">
     </div>
   </body>
